--- a/style.css
+++ b/style.css
@@ -1,5 +1,49 @@
-@import "main.css";
+* {
+    color: red;
+}
 
-h3 {
-    color: yellow;
+p {
+    color: green;
+}
+
+h1 {
+    color: blue;
+}
+
+.heading1 {
+    text-decoration: underline;
+}
+
+/* selector weight is 10 */
+.heading2 {
+    text-transform: uppercase;
+}
+
+.fz20 {
+    font-size: 45px;
+}
+
+p.fz10 {
+    font-size: 10px;
+    color: yellowgreen;
+}
+
+/* selector weight is 100 */
+#heading {
+    font-size: 60px;
+    border: 1px solid #000;
+}
+
+/* selector weight is 1 */
+q {
+    color: blue;
+}
+
+/* selector weight is 11 */
+q.simple {
+    color: aqua;
+}
+/* selector weight is 12 */
+body q.simple {
+    color: fuchsia;
 }
