--- a/style.css
+++ b/style.css
@@ -1,49 +1,47 @@
-* {
+h1,
+h2,
+span {
     color: red;
 }
 
-p {
+div p {
     color: green;
 }
 
-h1 {
+div p span {
     color: blue;
 }
 
-.heading1 {
-    text-decoration: underline;
+ul li > span {
+    font-weight: bold;
 }
 
-/* selector weight is 10 */
-.heading2 {
-    text-transform: uppercase;
-}
-
-.fz20 {
-    font-size: 45px;
-}
-
-p.fz10 {
-    font-size: 10px;
-    color: yellowgreen;
-}
-
-/* selector weight is 100 */
-#heading {
-    font-size: 60px;
-    border: 1px solid #000;
-}
-
-/* selector weight is 1 */
-q {
-    color: blue;
-}
-
-/* selector weight is 11 */
-q.simple {
+ul li + li {
     color: aqua;
 }
-/* selector weight is 12 */
-body q.simple {
-    color: fuchsia;
+
+br ~ p {
+    font-size: 40px;
+}
+
+a[target] {
+    background-color: yellow;
+}
+
+a[target="_blank"] {
+    background-color: blue;
+}
+/* start of str */
+a[href^="http://123"] {
+    background-color: aqua;
+}
+
+/* end of str */
+a[href$=".jpg"] {
+    background-color: teal;
+}
+
+/* all str */
+a[href*="link"] {
+    background-color: rebeccapurple;
 }
