--- a/style.css
+++ b/style.css
@@ -1,29 +1,21 @@
-/* p {
-    background-color: green;
-    color: white;
-    padding: 10px;
-}
-#style2 {
-background-color: pink;
-border: 2px solid black;
-}
-.style1 {
-    background-color: aqua;
-    color: black;
-    border: none !important;
+span, div {
+    border: 10px solid red;
+    margin: 10px 20px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 30px;
+    padding-left: 40px;
 }
 
-p {
-    background-color: gray;
-} */
-
-body {
-    color: red;
-    border: 1px solid #000;
-    margin-bottom: 30px;
+.test {
+    display: inline;
 }
 
-p {
-    border: inherit;
-    margin: inherit;
+.mar {
+    margin-top: 50px;
+    padding: 0px;
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    box-sizing: border-box;
 }
