--- a/style.css
+++ b/style.css
@@ -1,21 +1,44 @@
-span, div {
-    border: 10px solid red;
-    margin: 10px 20px;
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 30px;
-    padding-left: 40px;
+* {
+    margin: 0;
 }
 
-.test {
-    display: inline;
+.main {
+    /* font-size: 60px; */
+    font-size: 5px;
 }
 
-.mar {
-    margin-top: 50px;
-    padding: 0px;
-    width: 100px;
-    height: 100px;
-    display: inline-block;
+li {
+    /* font-size: 16px; */
+    /* font-size: 80%; */
+    /* font-size: 2em; */
+    font-size: 2rem;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    width: 100vw;
+    height: 100vh;
     box-sizing: border-box;
-}
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  
+  .modal {
+    border: 2px solid black;
+    width: 300px;
+    height: 100px;
+    background-color: cornflowerblue;
+    font-size: 20px;
+    color: white;
+    position: absolute;
+  
+    z-index: 2;
+    /* overflow: auto; */
+    /* overflow: scroll; */
+    overflow: hidden;
+    /* overflow-y: auto; */
+  }
