--- a/style.css
+++ b/style.css
@@ -1,44 +1,36 @@
-* {
-    margin: 0;
-}
-
-.main {
-    /* font-size: 60px; */
-    font-size: 5px;
-}
-
-li {
-    /* font-size: 16px; */
-    /* font-size: 80%; */
-    /* font-size: 2em; */
-    font-size: 2rem;
-}
-
-.overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+.wrapper,
+.wrapper2,
+.item {
+    padding: 20px;
     color: white;
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
+}
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
-  
-  .modal {
-    border: 2px solid black;
-    width: 300px;
-    height: 100px;
-    background-color: cornflowerblue;
-    font-size: 20px;
-    color: white;
-    position: absolute;
-  
-    z-index: 2;
-    /* overflow: auto; */
-    /* overflow: scroll; */
-    overflow: hidden;
-    /* overflow-y: auto; */
-  }
+.wrapper:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+.wrapper {
+    background-color: grey;
+}
+
+.wrapper2 {
+    background-color: green;
+}
+
+.item {
+    float: left;
+    width: 150px;
+}
+
+.item1 {
+    background-color: crimson;
+}
+
+.item2 {
+    background-color: cyan;
+}
+
+.item3 {
+    background-color: blueviolet;
+}
