--- a/style.css
+++ b/style.css
@@ -1,24 +1,32 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url(/Roboto-Regular.ttf) format('truetype');
-    font-weight: 500;
-    font-style: normal;
+.example {
+    width: 100px;
+    height: 100px;
+    background-color: grey;
+    margin: 20px;
+  
+    border: 10px ridge red;
+    border-right-style: none;
 }
 
-body {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+.example {
+    outline: 25px solid aqua;
+}
+
+button:focus,
+input:focus {
+    outline: 1px solid aqua;
+}
+
+.shadow {
+    width: 100px;
+    height: 100px;
+    background-color: grey;
+    margin: 20px;
+
+    box-shadow: 6px 7x 5px blue;
+    box-shadow: 1px 2px 5px red, -1px -2px 5px blue;
 }
 
 h1 {
-    color: blueviolet;
-    text-decoration: line-through overline underline;
-    word-spacing: 10px;
-    line-height: 50px;
-    text-transform: capitalize;
-    text-align: right;
-}
-
-p {
-    text-align: justify;
-    text-indent: 20px;
+    text-shadow: 1px 2px 5px red, 1px 2px 5px green, 1px 2px 5px yellowgreen;
 }
