--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
-.first {
-    /* Вырывает из потока документа */
-    display: none;
+body {
+    padding: 0;
+    margin: 0;
 }
 
-.second {
-    /* visibility: hidden; */
-    /* opacity: 0; */
-    /* color: transparent; */
-}
+.wrapper {
+    min-height: 100vh;
+    width: 100%;
 
-/* 
-    Вендорные префиксы используются для кроссбаузерной верстки и свойств, которые частично поддерживаются в отдельных браузерах
-*/
+    /* background-color: gainsboro; */
+
+    /* background-image: url(https://vjoy.cc/wp-content/uploads/2020/11/bezymyannyj-15.jpg); */
+    /* background-size: contain; */
+    /* background-size: cover; */
+    /* background-size: 500px 250px; */
+    /* background-repeat: no-repeat; */
+    /* background-repeat: repeat-x; */
+    /* background-repeat: repeat-y; */
+    /* background-position: right center; */
+    /* background-position: 50% 50%; */
+    /* background-attachment: fixed; */
+
+    /* background: gainsboro
+    url(https://vjoy.cc/wp-content/uploads/2020/11/bezymyannyj-15.jpg)
+    50% 50% no-repeat fixed; */
+
+    
+    /* background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1200px-CSS3_logo_and_wordmark.svg.png) center no-repeat,
+    url(https://vjoy.cc/wp-content/uploads/2020/11/bezymyannyj-15.jpg); */
+}
