repetition of css rules #17

--- a/style.css
+++ b/style.css
@@ -5,21 +5,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  
+.wrapper {
+    border: 2px solid black;
+    height: 169px;
+  
+    /* overflow: hidden; */
 }
-
+  
 img {
     transition: all 1s ease;
+    
+    /* transform-origin: right top; */
 }
 
 img:hover {
-    /* filter: blur(20px); */
-    /* filter: drop-shadow(5px 6px 4px rgba(0, 0, 0, 0.5)) */
-    /* filter: grayscale(80%); */
-    /* filter: brightness(150%); */
-    /* filter: contrast(150%); */
-    /* filter: hue-rotate(180deg); */
-    /* filter: invert(100%); */
-    /* filter: saturate(165%); */
-    /* filter: sepia(100%); */
-    /* filter: opacity(50%); */
+    /* transform: rotate(180deg); */
+    /* transform: scale(0.2, 1.2); */
+    /* transform: scaleY(0.5); */
+
+    /* transform: scale(1.2); */
+    /* transform: translate(50px, 80px); */
+    /* transform: skew(21deg, 21deg); */
+
+    transform: rotate(90deg);
 }
