--- a/style.css
+++ b/style.css
@@ -7,18 +7,23 @@ body{
     align-items: center;
 }
 
-table,
-table * {
-    border: 1px solid #000;
-    max-width: 500px;
-    border-collapse: separate;
-    /* border-spacing: 10px 50px; */
-    caption-side: bottom;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
+.example {
+    font-size: 30px;
+    border: 1px solid black;
+    width: 150px;
+    min-height: 150px;
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; */
+    /* word-wrap: break-word;
+    word-break: break-all;
+
+    writing-mode: vertical-rl; */
 }
 
-.dis {
-    pointer-events: none;
+.container {
+    column-count: 3;
+    column-rule: 1px solid black;
+    column-width: 300px;
+    column-gap: 100px;
 }
