--- a/style.css
+++ b/style.css
@@ -1,27 +1,57 @@
 body{
-    padding: 0;
+    padding: 10px 30px;
     margin: 0;
-    height: 100vh;
     background-color: lightgrey;
     font-size: 24px;
     font-family: monospace;
 }
 
-@media print {
-    body {
-        font-size: 50px;
-        color: green;
-    }
+input {
+    font-size: 24px;
+    padding: 5px 10px;
 }
 
-@media screen and (orientation: portrait) {
-    h1 {
-        display: none;
-    }
+::placeholder {
+    color: blue;
+    opacity: 1;
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) {
-    body {
-        background-color: aqua;
-    }
+::-ms-input-placeholder {
+    color: blue;
+}
+
+:-ms-input-placeholder {
+    color: blue;
+}
+
+::-webkit-scrollbar {
+    width: 25px;
+    background: #101124;
+}
+
+::-webkit-scrollbar-track {
+    border: 5px solod rgba(255, 255, 255, 0.25);
+    box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #00ffa1, #00ffff);
+    border-radius: 15px;
+}
+
+button {
+    width: 200px;
+    height: 79px;
+    background-image: url(./23.png);
+    background-position: top;
+    background-size: cover;
+    text-indent: -9999px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    outline: grey;
+}
+
+button:hover {
+    background-position: bottom;
 }
